# localDB-python

./: LICENSE  README.md  pyproject.toml  setup.py
localDB.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
localDataBase/: __init__.py  localDB.py  localDB.pyi
localDataBase.egg-info/: PKG-INFO  SOURCES.txt
